# ttt_eval

./: .gitignore  CLAUDE.md  LICENSE  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  TRAINING_PROGRESS_ENHANCEMENT.md  agro-rag-engine  pyproject.toml  red_team_attack.py  run_monitor.py  start.sh  ttt_dashboard.py  ttt_input_gradient_monitor_with_rollback.py
.archive/: CHAT_TAB_ENHANCEMENT.md  DASHBOARD_USER_GUIDE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  README.md
.archive/ttt/ui/: __init__.py  dashboard.py  legacy_dashboard.py
artifacts/base/: base_checkpoint.pt  base_meta.json
artifacts/sessions/: index.json
dashboard/: vite.config.ts
dashboard/src/: App.tsx
scripts/: build_assets_corpus.sh  fetch_tinystories.sh
training_data/: README.md
ttt/attacks/: red_team.py
ttt/core/: backbone.py  grad_utils.py  model.py  rollback.py  spfw.py
ttt/monitors/: gradient.py
ttt/optim/: __init__.py  muon.py
ttt/text_lm/: __init__.py  context.py  corpus.py  fast_memory.py  generate.py  model.py  session_store.py  sleep.py  store.py  train.py  ttt_chat.py
ttt/tokenization/: __init__.py  bpe.py
ttt/ui/: __init__.py  dashboard.py
ttt_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ttt_ssm_nano/: __init__.py  claude_code_prompt_phase1_branching.md  phase1_branching_muon.py  phase_1_runnable_implementation.md
ttt_ssm_nano/artifacts_api/: __init__.py  __main__.py  actions.py  app.py  deps.py  reader.py  text_chat_service.py  text_lm_service.py  text_runs.py  text_train_manager.py  ttt_monitor.py
(+47 files in other folders)
