[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttt_eval"
version = "0.1.0"
description = "Toy demo of an Input Gradient Monitor for test-time training (TTT)"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.0",
]

[project.scripts]
ttt-monitor = "run_monitor:main"
ttt-ssm-api = "ttt_ssm_nano.artifacts_api.__main__:main"

[tool.setuptools.packages.find]
include = ["ttt*", "ttt_ssm_nano*"]
exclude = ["dashboard*", "assets*", "artifacts*", "training_data*"]
